# spovm-lab-5

./: .gitignore  CMakeLists.txt  README.md  main.cpp  spovm-lab-5.sln
0005/: 0005.vcxproj  main.cpp
TheEvilAsyncIO/: TheEvilAsyncIO.vcxproj  TheEvilAsyncIO.vcxproj.filters  dllmain.cpp  theevilasyncio.cpp  theevilasyncio.h
handler/: handler.cpp
iolib/: CMakeLists.txt  iolib.cpp  iolib.h
